@@ -21,8 +21,6 @@
 
 from bzrlib.lazy_import import lazy_import
 lazy_import(globals(), """
-from copy import deepcopy
-import unittest
 
 from bzrlib import (
     errors,
@@ -684,55 +682,3 @@ class InterVersionedFile(InterObject):
                     else:
                         new_version_ids.add(version)
                 return new_version_ids
-
-
-class InterVersionedFileTestProviderAdapter(object):
-    """A tool to generate a suite testing multiple inter versioned-file classes.
-
-    This is done by copying the test once for each InterVersionedFile provider
-    and injecting the transport_server, transport_readonly_server,
-    versionedfile_factory and versionedfile_factory_to classes into each copy.
-    Each copy is also given a new id() to make it easy to identify.
-    """
-
-    def __init__(self, transport_server, transport_readonly_server, formats):
-        self._transport_server = transport_server
-        self._transport_readonly_server = transport_readonly_server
-        self._formats = formats
-    
-    def adapt(self, test):
-        result = unittest.TestSuite()
-        for (interversionedfile_class,
-             versionedfile_factory,
-             versionedfile_factory_to) in self._formats:
-            new_test = deepcopy(test)
-            new_test.transport_server = self._transport_server
-            new_test.transport_readonly_server = self._transport_readonly_server
-            new_test.interversionedfile_class = interversionedfile_class
-            new_test.versionedfile_factory = versionedfile_factory
-            new_test.versionedfile_factory_to = versionedfile_factory_to
-            def make_new_test_id():
-                new_id = "%s(%s)" % (new_test.id(), interversionedfile_class.__name__)
-                return lambda: new_id
-            new_test.id = make_new_test_id()
-            result.addTest(new_test)
-        return result
-
-    @staticmethod
-    def default_test_list():
-        """Generate the default list of interversionedfile permutations to test."""
-        from bzrlib.weave import WeaveFile
-        from bzrlib.knit import KnitVersionedFile
-        result = []
-        # test the fallback InterVersionedFile from annotated knits to weave
-        result.append((InterVersionedFile, 
-                       KnitVersionedFile,
-                       WeaveFile))
-        for optimiser in InterVersionedFile._optimisers:
-            result.append((optimiser,
-                           optimiser._matching_file_from_factory,
-                           optimiser._matching_file_to_factory
-                           ))
-        # if there are specific combinations we want to use, we can add them 
-        # here.
-        return result
